@@ -467,6 +467,12 @@ LogLevel warn
 .br
 Specifies the logging level for the ErrorLog file.
 .TP 5
+LogTimeFormat standard
+.TP 5
+LogTimeFormat usecs
+.br
+Specifies the format of the date and time in the log files.
+.TP 5
 MaxClients number
 .br
 Specifies the maximum number of simultaneous clients to support.
